Add privacy policy page

--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -43,6 +43,9 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                 <a class="nav-link px-lg-3 py-lg-4" id="btn_branches"
                 role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Branches</a>
             </li>
+            <li class="nav-item dropdown">
+                <a href="{{url_for('prime_home.privacy_policy')}}" class="nav-link px-lg-3 py-lg-4" aria-haspopup="true" aria-expanded="false">Privacy</a>
+            </li>
         </ul>
         <ul class="navbar-nav" style="margin-left: 30px;">
             <li class="nav-item dropdown">
