--- a/prime_home/templates/prime_home/navigation_header_2.html
+++ b/prime_home/templates/prime_home/navigation_header_2.html
@@ -39,6 +39,9 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
             <li class="nav-item dropdown">
                 <a href="{{url_for('prime_home.branches')}}" class="nav-link px-lg-3 py-lg-4" aria-haspopup="true" aria-expanded="false">Branches</a>
             </li>
+            <li class="nav-item dropdown">
+                <a href="{{url_for('prime_home.privacy_policy')}}" class="nav-link px-lg-3 py-lg-4" aria-haspopup="true" aria-expanded="false">Privacy</a>
+            </li>
         </ul>
         <!-- <a class="btn btn-light ml-lg-auto pl-4 pr-4 rounded-pill" href="#">Log In</a> -->
     </div>
