Add eps support

--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -68,7 +68,14 @@
 
     <script>
         $(document).ready(function (){
+            $('.dropdown-toggle').dropdown();
+
             $("#nav_services").click(function (){
+                $('html, body').animate({
+                    scrollTop: $("#services_section").offset().top
+                }, 2000);
+            });
+            $(".nav_services_item").click(function (){
                 $('html, body').animate({
                     scrollTop: $("#services_section").offset().top
                 }, 2000);
