--- a/prime_home/templates/prime_home/index/talk_section.html
+++ b/prime_home/templates/prime_home/index/talk_section.html
@@ -1,10 +1,26 @@
 <section class="primary-color pt-5 text-center text-lg-left text-white">
 <div class="container ">
     <div class="align-items-center row">
-        <div class="col-lg-7 order-lg-2 pb-5 pl-lg-5 pt-5">
-            <h5>Learn Korean with us</h5>
-            <h2 class="h1 mb-4">What job do you want in korea?</h2>
-            <a href="{{url_for('prime_home.contact_us')}}" class="btn btn-outline-light pl-4 pr-4 rounded-pill">Let&apos;s Talk</a>
+        <div class="col-lg-7 order-lg-2 pl-lg-5 pt-5">
+            <div>
+                <h5>Learn Korean with us</h5>
+                <h2 class="h1 mb-4">What job do you want in korea?</h2>
+                <a href="{{url_for('prime_home.contact_us')}}" class="btn btn-outline-light pl-4 pr-4 rounded-pill">Let&apos;s Talk</a>
+            </div>
+            <ul style="list-style: none;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row; margin-top: 40px; margin-bottom: 40px;">
+                <li>
+                    <a href="https://dmw.gov.ph/" target="_blank" ><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/poea_logo-CyWysa5F.png" alt="DMW" style="height: 80px;"></a>
+                </li>
+                <li>
+                    <a href="https://www.eps.go.kr/eo/langMain.eo?langCD=ph" target="_blank"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/eps.jpeg" alt="EPS" style="height: 80px;"></a>
+                </li>
+                <li>
+                    <a href="https://epstopik.hrdkorea.or.kr/epstopik/home/main/mainPage.do?lang=kr" target="_blank"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/epstopik.png" alt="EPS-TOPIK" style="height: 80px;"></a>
+                </li>
+            </ul>
         </div>
         <div class="col-lg-5 order-lg-1">
             <svg xmlns="http://www.w3.org/2000/svg" width="1120.661" height="897.38"
