--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -9,59 +9,36 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
     <div class="collapse navbar-collapse " id="navbarNavDropdown-4">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link px-lg-3 py-lg-4" href="{{ url_for('prime_home.index') }}">Home</a>
+                <a class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white" href="{{ url_for('prime_home.index') }}">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a @click="scrollGoToAbout" class="nav-link px-lg-3 py-lg-4" id="navbarDropdownMenuLink"
+                <a @click="scrollGoToAbout" class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white" id="navbarDropdownMenuLink"
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link px-lg-3 py-lg-4 " href="#" id="nav_services"
+                <a class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white " href="#" id="nav_services"
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item">Learn Korean</a>
-                    <a class="dropdown-item">Work in South Korea</a>
-                </div>
             </li>
             <li class="nav-item dropdown"> 
-                <a class="nav-link px-lg-3 py-lg-4" id="nav_testimonies" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Testimonies</a> 
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
-                    <a id="btn_proof_of_gallery" class="dropdown-item">Our Proof of Gallery</a>
-                    <a id="btn_orientation" class="dropdown-item">Orientation</a>
-                    <a id="btn_actual_class" class="dropdown-item">Actual Class</a>
-                    <a id="btn_graduation" class="dropdown-item">Graduation</a>
-                    <a id="btn_skill_test" class="dropdown-item">Skill test</a>
-                    <a id="btn_departure" class="dropdown-item">Departure in South Korea</a>
-                </div>                             
+                <a class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white" id="nav_testimonies" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Testimonies</a>                         
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link px-lg-3 py-lg-4" href="#" id="nav_contact_us"
+                <a class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white" href="#" id="nav_contact_us"
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact
                     Us</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link px-lg-3 py-lg-4" id="btn_branches"
+                <a class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white" id="btn_branches"
                 role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Branches</a>
             </li>
             <li class="nav-item dropdown">
-                <a href="{{url_for('prime_home.privacy_policy')}}" class="nav-link px-lg-3 py-lg-4" aria-haspopup="true" aria-expanded="false">Privacy</a>
+                <a href="{{url_for('prime_home.privacy_policy')}}" class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white" aria-haspopup="true" aria-expanded="false">Privacy Policy</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a href="{{url_for('prime_home.eps_support')}}" class="nav-link px-lg-3 py-lg-4 font-weight-bold text-white" aria-haspopup="true" aria-expanded="false">EPS Support</a>
             </li>
         </ul>
-        <ul class="navbar-nav" style="margin-left: 30px;">
-            <li class="nav-item dropdown">
-                <a href="https://www.dmw.gov.ph" class="nav-link px-lg-3 py-lg-4" 
-                    role="button" aria-haspopup="true" aria-expanded="false">DMW</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a href="https://epstopik.hrdkorea.or.kr/epstopik/home/main/mainPage.do?lang=kr" class="nav-link px-lg-3 py-lg-4"
-                    role="button" aria-haspopup="true" aria-expanded="false">EPS-TOPIK</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a href="https://onlineservices.dmw.gov.ph//OnlineServices/POEAOnline.aspx" class="nav-link px-lg-3 py-lg-4" id="navbarDropdownMenuLink"
-                    role="button" aria-haspopup="true" aria-expanded="false">E-Registration</a>
-            </li>
-        </ul>
-        <a class="btn btn-light ml-lg-auto pl-4 pr-4 rounded-pill" href="{{url_for('bp_auth.login')}}">Log In</a>
+        <a class="btn btn-light ml-lg-auto pl-4 pr-4 rounded-pill font-weight-bold" href="{{url_for('bp_auth.login')}}">Log In</a>
     </div>
 </div>
 </nav>
