--- a/prime_home/templates/prime_home/eps_support_page.html
+++ b/prime_home/templates/prime_home/eps_support_page.html
@@ -6,14 +6,48 @@
 
 {% block content %}
 <section class="primary-color pt-5 text-white">
-    <div class="container mb-4 py-5">
+    <div class="container mb-4 py-3">
         <h1 class="display-5 fw-bold">EPS Support</h1>
+        <br>
+        <h2 class="display-5 fw-bold">Welcome to Prime Korean Language and Review Center!</h2>
+        <p class="fs-3 mb-0">We are delighted to have you visit our website. At Prime KLC, we are committed to providing top-notch language services and support for both our students and the Filipino community in South Korea.</p>
+        <h2 class="display-5 fw-bold mt-4">Meet Miss Hyunae J. Eagar</h2>
+        <p class="fs-3 mb-0">We are honored to introduce Miss Hyunae J. Eagar, a Filipino-Korean Certified Court Interpreter. With her unique background and expertise, she plays a vital role in bridging language and cultural gaps, making her an invaluable asset to our community. Her dedication to helping our students, as well as the Filipino community in South Korea, ensures that they receive the best guidance when navigating legal and administrative challenges.</p>
     </div>
 </section>
 
 <section class="pb-5 pt-5 dark-transparent-bg"> 
     <div class="container">
-        <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/b17bfeb9-8d85-4abc-9ee9-d63515a1fcde.jpeg" alt="EPS Support" style="width: 100%;">
+        <div class="row">
+            <div class="col-4 bg-white px-4 py-5 text-dark">
+                <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/Hyunae2.jpeg" alt="EPS Support" style="width: 100%;">
+
+                <h2 class="fw-bold mt-5"><strong>Hyunae J. Eagar</strong></h2>
+                <h4>Certified Legal Interpreter</h4>
+                <br>
+                <h5>Korean | English | Tagalog</h5>
+            </div>
+            <div class="col-8 px-4 py-5 text-white background-korea-spring3">
+                <h2 class="display-5 fw-bold"><strong>About Hyunae J. Eagar</strong></h2>
+                <p>Hyunae J. Eagar is a Filipino-Korean Certified Court Interpreter with a unique background as both Filipino and Korean. This dual heritage gives her a deep understanding of both cultures, enabling her to bridge language and cultural gaps effectively. Specializing in English and Tagalog, she is a trusted interpreter with certifications in both legal and medical interpreting.</p>
+                <p>Hyunae J. Eagar provides valuable support to our Prime KLC students who are now successfully working in South Korea, guiding them through any legal or administrative challenges they may encounter. She is also available to assist any Filipino in South Korea who needs guidance, offering her expertise to those facing legal issues or needing support from a certified court interpreter.</p>
+                <h2 class="display-5 fw-bold mt-4"><strong>Credentials</strong></h2>
+                <ul style="padding-inline-start: 40px;">
+                    <li><p><strong>Certified Police Interpreter</strong> at Ansan Danwon Police Station (English & Tagalog)</p></li>
+                    <li><p><strong>Certified Legal Interpreter</strong> at Ansan Prosecutor's Office (Human Rights Department)</p></li>
+                    <li><p><strong>Certified Court Interpreter</strong> (English & Tagalog)</p></li>
+                    <li><p><strong>Multicultural Counselor</strong></p></li>
+                </ul>
+                <h2 class="display-5 fw-bold mt-4"><strong>Contact Miss Hyunae J. Eagartials</strong></h2>
+                <p>For assistance or legal and administrative guidance, you can reach Miss Hyunae through the following contact details:</p>
+                <ul style="padding-inline-start: 40px;">
+                    <li><p><strong>Phone:</strong> 010-3397-3593</p></li>
+                    <li><p><strong>Email:</strong> <a href="mailto:hj.laservice@gmail.com" class="text-white text-decoration-underline">hj.laservice@gmail.com</a></p></li>
+                    <li><p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=100071473306859" target="_blank" class="text-white text-decoration-underline">Hyunae Jeong<a></a></p></li>
+                    <li><p><strong>Facebook Page:</strong> <a href="https://www.facebook.com/profile.php?id=100084052728341" target="_blank" class="text-white text-decoration-underline">Certified Court Interpreter</a></p></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </section>
 
