--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -7,20 +7,13 @@
                 {% for testimonial in testimonials %}
                     <div class="carousel-item {% if loop.first %}active{% endif %}">
                         <div class="align-items-center row">
-                            <div class="col-lg-4 pb-3 pt-3 text-center">
-                                <video controls autoplay muted style="max-width: 100%;height: auto;">
-                                    <source src="{{testimonial.deployment_information.tarp_photo}}" type="video/mp4">
-                                </video>
-                            </div>
-                            <div class="col-lg-8 pb-3 pt-3">
-                                <svg viewBox="0 0 24 24" fill="currentColor" height="64" width="64"
-                                    class="mb-3 text-favorite2">
-                                    <path
-                                        d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
-                                </svg>
-                                <p class="font-weight-light h5 mb-4">{{testimonial.deployment_information.student_message}}</p>
-                                <h4 class="font-weight-bold mb-1 text-favorite2">{{testimonial.fname}} {{testimonial.lname}}</h4>
-                                <p class="font-weight-bold testimonial_pos">{{testimonial.no_of_klt}}</p>
+                            <div class="col-lg-12 pb-3 pt-3 text-center">
+                                <img src="{{testimonial.deployment_information.message_photo}}" class="img-fluid">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h4 class="font-weight-bold mb-1 text-white">{{testimonial.fname}} {{testimonial.lname}}</h4>
+                                    <p class="font-weight-bold testimonial_pos">{{testimonial.no_of_klt}}</p>
+                                    <p class="font-weight-light h5 mb-4">{{testimonial.deployment_information.student_message}}</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -31,6 +24,42 @@
                     <li data-target="#carousel7" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %} primary-color2"></li>
                 {% endfor %}
             </ol>
+            <a class="carousel-control-prev" href="#carousel7" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel7" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div data-aos="fade-right" id="carousel77" class="carousel slide" data-ride="carousel" data-interval="3000">
+            <div class="carousel-inner">
+                {% for testimonial in testimonials %}
+                    <div class="carousel-item {% if loop.first %}active{% endif %}">
+                        <div class="align-items-center row">
+                            <div class="col-lg-12 pb-3 pt-3 text-center">
+                                <video controls autoplay muted style="max-width: 100%;height: auto;">
+                                    <source src="{{testimonial.deployment_information.tarp_photo}}" type="video/mp4">
+                                </video>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <ol class="carousel-indicators position-relative">
+                {% for testimonial in testimonials %}
+                    <li data-target="#carousel77" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %} primary-color2"></li>
+                {% endfor %}
+            </ol>
+            <a class="carousel-control-prev" href="#carousel77" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel77" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 </section>
