--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -33,6 +33,8 @@
               <span class="sr-only">Next</span>
             </a>
         </div>
+    </div>
+    <div class="container pb-3 pt-3">
         <div data-aos="fade-right" id="carousel77" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
                 {% for testimonial in testimonials %}
