--- a/prime_admin/templates/lms/settings/class_schedule_settings_page.html
+++ b/prime_admin/templates/lms/settings/class_schedule_settings_page.html
@@ -179,6 +179,12 @@
                                         <option value="SAT">
                                             SAT
                                         </option>
+                                        <option value="ONLINE_CLASS">
+                                            ONLINE_CLASS
+                                        </option>
+                                        <option value="REVIEW">
+                                            REVIEW
+                                        </option>
                                     </select>
                                     <div class="valid-feedback">
                                         Looks good!
