--- a/prime_home/templates/prime_home/eps_support_page.html
+++ b/prime_home/templates/prime_home/eps_support_page.html
@@ -38,7 +38,7 @@
                     <li><p><strong>Certified Court Interpreter</strong> (English & Tagalog)</p></li>
                     <li><p><strong>Multicultural Counselor</strong></p></li>
                 </ul>
-                <h2 class="display-5 fw-bold mt-4"><strong>Contact Miss Hyunae J. Eagartials</strong></h2>
+                <h2 class="display-5 fw-bold mt-4"><strong>Contact Mrs. Hyunae J. Eagar</strong></h2>
                 <p>For assistance or legal and administrative guidance, you can reach Miss Hyunae through the following contact details:</p>
                 <ul style="padding-inline-start: 40px;">
                     <li><p><strong>Phone:</strong> 010-3397-3593</p></li>
