--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -5,63 +5,75 @@
         <div data-aos="fade-right" id="carousel7" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
                 {% for testimonial in testimonials %}
-                    <div class="carousel-item {% if loop.first %}active{% endif %}">
-                        <div class="align-items-center row">
-                            <div class="col-lg-12 pb-3 pt-3 text-center">
-                                <img src="{{testimonial.deployment_information.message_photo}}" class="img-fluid">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h4 class="font-weight-bold mb-1 text-white">{{testimonial.fname}} {{testimonial.lname}}</h4>
-                                    <p class="font-weight-bold testimonial_pos">{{testimonial.no_of_klt}}</p>
-                                    <p class="font-weight-light h5 mb-4">{{testimonial.deployment_information.student_message}}</p>
+                    {% if testimonial.deployment_information.message_photo %}
+                        <div class="carousel-item {% if loop.first %}active{% endif %}">
+                            <div class="align-items-center row">
+                                <div class="col-lg-12 pb-3 pt-3 text-center">
+                                    <img src="{{testimonial.deployment_information.message_photo}}" class="img-fluid">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h4 class="font-weight-bold mb-1 text-white">{{testimonial.fname}} {{testimonial.lname}}</h4>
+                                        <p class="font-weight-bold testimonial_pos">{{testimonial.no_of_klt}}</p>
+                                        <p class="font-weight-light h5 mb-4">{{testimonial.deployment_information.student_message}}</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 {% endfor %}
             </div>
             <ol class="carousel-indicators position-relative">
                 {% for testimonial in testimonials %}
-                    <li data-target="#carousel7" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %} primary-color2"></li>
+                    {% if testimonial.deployment_information.message_photo %}
+                        <li data-target="#carousel7" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %} primary-color2"></li>
+                    {% endif %}
                 {% endfor %}
             </ol>
-            <a class="carousel-control-prev" href="#carousel7" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel7" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            {% if testimonials %}
+                <a class="carousel-control-prev" href="#carousel7" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel7" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            {% endif %}
         </div>
     </div>
     <div class="container pb-3 pt-3">
         <div data-aos="fade-right" id="carousel77" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
                 {% for testimonial in testimonials %}
-                    <div class="carousel-item {% if loop.first %}active{% endif %}">
-                        <div class="align-items-center row">
-                            <div class="col-lg-12 pb-3 pt-3 text-center">
-                                <video controls autoplay muted style="max-width: 100%;height: auto;">
-                                    <source src="{{testimonial.deployment_information.tarp_photo}}" type="video/mp4">
-                                </video>
+                    {% if testimonial.deployment_information.tarp_photo %}
+                        <div class="carousel-item {% if loop.first %}active{% endif %}">
+                            <div class="align-items-center row">
+                                <div class="col-lg-12 pb-3 pt-3 text-center">
+                                    <video controls autoplay muted style="max-width: 100%;height: auto;">
+                                        <source src="{{testimonial.deployment_information.tarp_photo}}" type="video/mp4">
+                                    </video>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 {% endfor %}
             </div>
             <ol class="carousel-indicators position-relative">
                 {% for testimonial in testimonials %}
-                    <li data-target="#carousel77" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %} primary-color2"></li>
+                    {% if testimonial.deployment_information.tarp_photo %}
+                        <li data-target="#carousel77" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %} primary-color2"></li>
+                    {% endif %}
                 {% endfor %}
             </ol>
-            <a class="carousel-control-prev" href="#carousel77" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel77" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            {% if testimonials %}
+                <a class="carousel-control-prev" href="#carousel77" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel77" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            {% endif %}
         </div>
     </div>
 </section>
