--- a/prime_home/templates/prime_home/eps_support_page.html
+++ b/prime_home/templates/prime_home/eps_support_page.html
@@ -11,8 +11,8 @@
         <br>
         <h2 class="display-5 fw-bold">Welcome to Prime Korean Language and Review Center!</h2>
         <p class="fs-3 mb-0">We are delighted to have you visit our website. At Prime KLC, we are committed to providing top-notch language services and support for both our students and the Filipino community in South Korea.</p>
-        <h2 class="display-5 fw-bold mt-4">Meet Miss Hyunae J. Eagar</h2>
-        <p class="fs-3 mb-0">We are honored to introduce Miss Hyunae J. Eagar, a Filipino-Korean Certified Court Interpreter. With her unique background and expertise, she plays a vital role in bridging language and cultural gaps, making her an invaluable asset to our community. Her dedication to helping our students, as well as the Filipino community in South Korea, ensures that they receive the best guidance when navigating legal and administrative challenges.</p>
+        <h2 class="display-5 fw-bold mt-4">Meet Mrs. Hyunae J. Eagar</h2>
+        <p class="fs-3 mb-0">We are honored to introduce Mrs. Hyunae J. Eagar, a Filipino-Korean Certified Court Interpreter. With her unique background and expertise, she plays a vital role in bridging language and cultural gaps, making her an invaluable asset to our community. Her dedication to helping our students, as well as the Filipino community in South Korea, ensures that they receive the best guidance when navigating legal and administrative challenges.</p>
     </div>
 </section>
 
@@ -39,7 +39,7 @@
                     <li><p><strong>Multicultural Counselor</strong></p></li>
                 </ul>
                 <h2 class="display-5 fw-bold mt-4"><strong>Contact Mrs. Hyunae J. Eagar</strong></h2>
-                <p>For assistance or legal and administrative guidance, you can reach Miss Hyunae through the following contact details:</p>
+                <p>For assistance or legal and administrative guidance, you can reach Mrs. Hyunae through the following contact details:</p>
                 <ul style="padding-inline-start: 40px;">
                     <li><p><strong>Phone:</strong> 010-3397-3593</p></li>
                     <li><p><strong>Email:</strong> <a href="mailto:hj.laservice@gmail.com" class="text-white text-decoration-underline">hj.laservice@gmail.com</a></p></li>
