--- a/prime_home/templates/prime_home/index/about_us_section.html
+++ b/prime_home/templates/prime_home/index/about_us_section.html
@@ -5,51 +5,13 @@ id="about">
         <div class="col-lg-12 ml-auto mr-auto">
             <!-- <a class="btn btn-danger pl-4 pr-4 rounded-pill" href="#">Learn More</a> -->
             <div class="embed-responsive embed-responsive-16by9 mb-4">
-                <video id="vid_welcome" width="560" height="315" controls autoplay muted>
+                <video class="video-observe" width="560" height="315" controls autoplay muted>
                     <source src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/welcome_vid_1.mp4" type="video/mp4">
                   </video>
             </div>
             <div class="pb-4 pt-4 text-center">
                 <a style="color: white;" class="btn btn-primary pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.about')}}">View More</a>
             </div>
-            <script>
-                document.addEventListener('DOMContentLoaded', function() {
-                    var video = document.getElementById('vid_welcome');
-                    var userInteracted = false;
-            
-                    // Function to handle intersection changes
-                    function handleIntersection(entries) {
-                        entries.forEach(function(entry) {
-                            if (entry.isIntersecting && entry.intersectionRatio >= 0.5) {
-                                // Video is at least 50% visible
-                                if (userInteracted) {
-                                    video.muted = false; // Unmute the video
-                                }
-                                video.play().catch(function(error) {
-                                    console.log('Play prevented:', error);
-                                });
-                            } else {
-                                video.pause();
-                            }
-                        });
-                    }
-            
-                    // Create an IntersectionObserver instance
-                    var observer = new IntersectionObserver(handleIntersection, {
-                        threshold: [0, 0.5, 1] // Thresholds at 0%, 50%, and 100%
-                    });
-            
-                    // Observe the video element
-                    observer.observe(video);
-            
-                    // Listen for any user interaction
-                    ['click', 'scroll', 'keydown', 'touchstart'].forEach(function(event) {
-                        window.addEventListener(event, function() {
-                            userInteracted = true;
-                        }, { once: true }); // Only need to detect the first interaction
-                    });
-                });
-            </script>
         </div>
     </div>
 </div>
